versions/0.9.0/_sources/refs/_aws-cdk_aws-stepfunctions.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"Up+YZjBuP2BwFlbvA6qPSJ9yhSYbL09zGUF+FpvFlpM="}

@aws-cdk/aws-stepfunctions
==========================

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.StepFunctions/0.9.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.StepFunctions" Version="0.9.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.StepFunctions --version 0.9.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.StepFunctions" version="0.9.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/stepfunctions/0.9.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:stepfunctions:jar:0.9.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="stepfunctions" rev="0.9.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>stepfunctions</artifactId>
           <version>0.9.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:stepfunctions:0.9.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='stepfunctions', version='0.9.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-stepfunctions/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-stepfunctions@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-stepfunctions": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-stepfunctions@0.9.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-stepfunctions/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-stepfunctions@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-stepfunctions": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-stepfunctions@0.9.0



.. mdinclude:: ./__aws-cdk_aws-stepfunctions.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-stepfunctions

ActivityArn
^^^^^^^^^^^

.. py:class:: ActivityArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.StepFunctions;

      .. code-tab:: java

         import software.amazon.awscdk.services.stepfunctions.ActivityArn;

      .. code-tab:: javascript

         const { ActivityArn } = require('@aws-cdk/aws-stepfunctions');

      .. code-tab:: typescript

         import { ActivityArn } from '@aws-cdk/aws-stepfunctions';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

ActivityName
^^^^^^^^^^^^

.. py:class:: ActivityName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.StepFunctions;

      .. code-tab:: java

         import software.amazon.awscdk.services.stepfunctions.ActivityName;

      .. code-tab:: javascript

         const { ActivityName } = require('@aws-cdk/aws-stepfunctions');

      .. code-tab:: typescript

         import { ActivityName } from '@aws-cdk/aws-stepfunctions';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

StateMachineArn
^^^^^^^^^^^^^^^

.. py:class:: StateMachineArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.StepFunctions;

      .. code-tab:: java

         import software.amazon.awscdk.services.stepfunctions.StateMachineArn;

      .. code-tab:: javascript

         const { StateMachineArn } = require('@aws-cdk/aws-stepfunctions');

      .. code-tab:: typescript

         import { StateMachineArn } from '@aws-cdk/aws-stepfunctions';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

StateMachineName
^^^^^^^^^^^^^^^^

.. py:class:: StateMachineName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.StepFunctions;

      .. code-tab:: java

         import software.amazon.awscdk.services.stepfunctions.StateMachineName;

      .. code-tab:: javascript

         const { StateMachineName } = require('@aws-cdk/aws-stepfunctions');

      .. code-tab:: typescript

         import { StateMachineName } from '@aws-cdk/aws-stepfunctions';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-stepfunctions.cloudformation

ActivityResource
~~~~~~~~~~~~~~~~

.. py:class:: ActivityResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.StepFunctions;

      .. code-tab:: java

         import software.amazon.awscdk.services.stepfunctions.cloudformation.ActivityResource;

      .. code-tab:: javascript

         const { cloudformation.ActivityResource } = require('@aws-cdk/aws-stepfunctions');

      .. code-tab:: typescript

         import { cloudformation.ActivityResource } from '@aws-cdk/aws-stepfunctions';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ActivityResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ActivityResource``
   :type properties: :py:class:`~@aws-cdk/aws-stepfunctions.cloudformation.ActivityResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: activityName

      :type: :py:class:`~@aws-cdk/aws-stepfunctions.ActivityName` *(readonly)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-stepfunctions.ActivityArn` *(readonly)*


ActivityResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ActivityResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.StepFunctions;

      .. code-tab:: java

         import software.amazon.awscdk.services.stepfunctions.cloudformation.ActivityResourceProps;

      .. code-tab:: javascript

         // cloudformation.ActivityResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ActivityResourceProps } from '@aws-cdk/aws-stepfunctions';





   .. py:attribute:: activityName

      ``AWS::StepFunctions::Activity.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-stepfunctions-activity.html#cfn-stepfunctions-activity-name


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


StateMachineResource
~~~~~~~~~~~~~~~~~~~~

.. py:class:: StateMachineResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.StepFunctions;

      .. code-tab:: java

         import software.amazon.awscdk.services.stepfunctions.cloudformation.StateMachineResource;

      .. code-tab:: javascript

         const { cloudformation.StateMachineResource } = require('@aws-cdk/aws-stepfunctions');

      .. code-tab:: typescript

         import { cloudformation.StateMachineResource } from '@aws-cdk/aws-stepfunctions';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``StateMachineResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``StateMachineResource``
   :type properties: :py:class:`~@aws-cdk/aws-stepfunctions.cloudformation.StateMachineResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-stepfunctions.StateMachineArn` *(readonly)*


   .. py:attribute:: stateMachineName

      :type: :py:class:`~@aws-cdk/aws-stepfunctions.StateMachineName` *(readonly)*


StateMachineResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: StateMachineResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.StepFunctions;

      .. code-tab:: java

         import software.amazon.awscdk.services.stepfunctions.cloudformation.StateMachineResourceProps;

      .. code-tab:: javascript

         // cloudformation.StateMachineResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.StateMachineResourceProps } from '@aws-cdk/aws-stepfunctions';





   .. py:attribute:: definitionString

      ``AWS::StepFunctions::StateMachine.DefinitionString``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-stepfunctions-statemachine.html#cfn-stepfunctions-statemachine-definitionstring


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: roleArn

      ``AWS::StepFunctions::StateMachine.RoleArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-stepfunctions-statemachine.html#cfn-stepfunctions-statemachine-rolearn


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: stateMachineName

      ``AWS::StepFunctions::StateMachine.StateMachineName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-stepfunctions-statemachine.html#cfn-stepfunctions-statemachine-statemachinename


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



.. py:currentmodule:: @aws-cdk/aws-stepfunctions

